--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Short stories'
 - !lcsh 'Science fiction'
+- GITenberg
 title: Field Trip
 url: http://www.gutenberg.org/ebooks/30379
